k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wentask-ingress
  namespace: wentask

spec:
  ingressClassName: nginx

  rules:
    - host: wentask.local

      http:
        paths:

          # API Backend Spring Boot
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          # Frontend Angular
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
